--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@primevue/themes": "^4.2.5",
     "autoprefixer": "^10.4.20",
     "pinia": "^2.3.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
