--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "bun run type-check && bun run build-only",
     "preview": "vite preview",
     "test:unit": "vitest --no-watch",
     "build-only": "vite build",
