--- a/.github/workflows/deploy.js.yaml
+++ b/.github/workflows/deploy.js.yaml
@@ -33,7 +33,7 @@ jobs:
         run: bun install
 
       - name: Build
-        run: bun run build
+        run: bun run build-only
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
